--- a/config.ini
+++ b/config.ini
@@ -1,9 +1,10 @@
 [global]
-workpath = E:\my_works
-currentwork = IM-8508
+workpath = E:\my_works\
+currentwork = IM-1234
 nickname = zxb
 use_server = localhost
 indentify_col_name = 1
+git_repo_path = E:\git\datadept\
 
 [referencefile]
 emptytxt = reference_files\\1111.txt
@@ -17,69 +18,24 @@ img = reference_files\\crazyrabbit.png
 
 [localhost]
 host = localhost
+port = 3306
 user = root
 password = root
 
 [188server]
 host = 192.168.1.188
+port = 3306
 user = root
 password = justdoit
-refreshurl = https://192.168.1.188/np/refresh/instances.do
-loginlink = https://192.168.1.188/np/clients/{}/login.jsp
 
 [worklist]
-im-8308 = IM-8308
-im-8336 = IM-8336
-cc-3423 = CC-3423
-im-8508 = IM-8508
-im-2132 = IM-2132
-im-342 = IM-342
+im-1234 = IM-1234
 
-[IM-8308]
-database = runmdra
-jiradb = im_8308
-jiraname = IM-8308
-jirapath = E:\my_works\2019\11\First_Import\IM-8308
-worktype = First_Import
-importexcelpath = E:\my_works\2019\11\First_Import\IM-8308\xls\importexcels
 
-[IM-8336]
-database = rachelsnetwork
-jiradb = im_8336
-jiraname = IM-8336
-jirapath = E:\my_works\2019\11\Fix_Import\IM-8336
-worktype = Fix_Import
-importexcelpath = E:\my_works\2019\11\Fix_Import\IM-8336\xls\importexcels
-
-[CC-3423]
-database = teachingtrust
-jiradb = cc_3423
-jiraname = CC-3423
-jirapath = E:\my_works\2020\4\Data_Service\CC-3423
-worktype = Data_Service
-importexcelpath = E:\my_works\2020\4\Data_Service\CC-3423\xls\importexcels
-
-[IM-8508]
-database = 1
-jiradb = im_8508
-jiraname = IM-8508
-jirapath = E:\my_works\2020\4\First_Import\IM-8508
-worktype = First_Import
-importexcelpath = E:\my_works\2020\4\First_Import\IM-8508\xls\importexcels
-
-[IM-2132]
-database = rt
-jiradb = im-2132
-jiraname = IM-2132
-jirapath = E:\\my_works\2020\5\First_Import\IM-2132
+[IM-1234]
+dbname = ttttt
+jiraname = IM-1234
+jirapath = E:\my_works\2020\5\First_Import\IM-1234\
 worktype = First Import
-importexcelpath = E:\\my_works\2020\5\First_Import\IM-2132\xls\importexcels
-
-[IM-342]
-database = err
-jiradb = im-342
-jiraname = IM-342
-jirapath = E:\ny_works\2020\5\First_Import\IM-342
-worktype = First Import
-importexcelpath = E:\ny_works\2020\5\First_Import\IM-342\xls\importexcels
+importexcelpath = E:\my_works\2020\5\First_Import\IM-1234\xls\importexcels\
 
