--- a/config.ini
+++ b/config.ini
@@ -1,17 +1,14 @@
 [global]
 workpath = E:\my_works\
-currentwork = IM-1234
+currentwork = IM-12345
 nickname = zxb
 use_server = localhost
 indentify_col_name = 1
 git_repo_path = E:\git\datadept\
+navicat_script_path = C:\Users\superman\Documents\Navicat\MySQL\servers\localhost\
 
 [referencefile]
 emptytxt = reference_files\\1111.txt
-addtion = reference_files\\addtion.sql
-addtion_b4 = reference_files\\addtion_b4.sql
-rename_table = reference_files\\rename_table.sql
-instance_sql = reference_files\\instance.sql
 cleanexcel = reference_files\\cleanexcel.sql
 persons = reference_files\\persons.txt
 img = reference_files\\crazyrabbit.png
@@ -29,13 +26,12 @@ user = root
 password = justdoit
 
 [worklist]
-im-1234 = IM-1234
+im-12345 = IM-12345
 
-
-[IM-1234]
-dbname = ttttt
-jiraname = IM-1234
-jirapath = E:\my_works\2020\5\First_Import\IM-1234\
+[IM-12345]
+dbname = testdb
+jiraname = IM-12345
+jirapath = E:\my_works\2020\5\First_Import\IM-12345\
 worktype = First Import
-importexcelpath = E:\my_works\2020\5\First_Import\IM-1234\xls\importexcels\
+importexcelpath = E:\my_works\2020\5\First_Import\IM-12345\xls\importexcels\
 
