--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 [global]
 workpath = E:\my_works\
-currentwork = IM-12345
+currentwork = None
 nickname = zxb
 use_server = localhost
 indentify_col_name = 1
@@ -26,12 +26,4 @@ user = root
 password = justdoit
 
 [worklist]
-im-12345 = IM-12345
-
-[IM-12345]
-dbname = testdb
-jiraname = IM-12345
-jirapath = E:\my_works\2020\5\First_Import\IM-12345\
-worktype = First Import
-importexcelpath = E:\my_works\2020\5\First_Import\IM-12345\xls\importexcels\
 
