--- a/config.ini
+++ b/config.ini
@@ -1,17 +1,15 @@
 [global]
-workpath = E:\my_works\
-currentwork = None
-nickname = zxb
-use_server = localhost
-indentify_col_name = 1
-git_repo_path = E:\git\datadept\
-navicat_script_path = C:\Users\superman\Documents\Navicat\MySQL\servers\localhost\
+currentwork = IM-1234
+server = localhost
 
 [referencefile]
 emptytxt = reference_files\\1111.txt
 cleanexcel = reference_files\\cleanexcel.sql
-persons = reference_files\\persons.txt
-img = reference_files\\crazyrabbit.png
+
+[defaultpath]
+workpath = E:\my_works\
+git_repo_path = E:\git\datadept\
+navicat_script_path = C:\Users\superman\Documents\Navicat\MySQL\servers\localhost\
 
 [localhost]
 host = localhost
@@ -25,5 +23,39 @@ port = 3306
 user = root
 password = justdoit
 
+[aws201]
+host = 127.0.0.1
+port = 3308
+user = root
+password = justdoit
+
 [worklist]
+im-1234 = IM-1234
+im-1233 = IM-1233
+im-12345 = IM-12345
+
+[excelimporter]
+nickname = zxb
+indentify_col_name = 1
+
+[IM-1234]
+dbname = aaaaaaa
+jiraname = IM-1234
+jirapath = E:\my_works\2020\5\First_Import\IM-1234\
+worktype = First Import
+merge = True
+
+[IM-1233]
+dbname = mmmmm
+jiraname = IM-1233
+jirapath = E:\my_works\2020\5\First_Import\IM-1233\
+worktype = First Import
+merge = True
+
+[IM-12345]
+dbname = bbbbbbbbbbb
+jiraname = IM-12345
+jirapath = E:\my_works\2020\5\First_Import\IM-12345\
+worktype = First Import
+merge = True
 
