--- a/config.ini
+++ b/config.ini
@@ -1,60 +1,41 @@
 [global]
-currentwork = IM-1234
+currentwork = 
 server = localhost
 
 [referencefile]
-emptytxt = reference_files\\1111.txt
-cleanexcel = reference_files\\cleanexcel.sql
+emptytxt = reference_files\1111.txt
+cleanexcel = reference_files\cleanexcel.sql
 
 [defaultpath]
 workpath = E:\my_works\
 git_repo_path = E:\git\datadept\
-navicat_script_path = C:\Users\superman\Documents\Navicat\MySQL\servers\localhost\
+navicat_script_path = C:\Users\ryjfgjl\Documents\Navicat\MySQL\Servers\cd188\
+desktoppath = C:\Users\ryjfgjl\Desktop\
+winscppath = F:\WinSCP\
 
 [localhost]
 host = localhost
 port = 3306
 user = root
 password = root
+navicat_script_path = C:\Users\ryjfgjl\Documents\Navicat\MySQL\Servers\localhost\
 
-[188server]
+[awshost]
+host = 127.0.0.1
+port = 3307
+user = root
+password = justdoit
+
+[cd188]
 host = 192.168.1.188
 port = 3306
 user = root
 password = justdoit
-
-[aws201]
-host = 127.0.0.1
-port = 3308
-user = root
-password = justdoit
-
-[worklist]
-im-1234 = IM-1234
-im-1233 = IM-1233
-im-12345 = IM-12345
+navicat_script_path = C:\Users\ryjfgjl\Documents\Navicat\MySQL\Servers\cd188\
 
 [excelimporter]
-nickname = zxb
-indentify_col_name = 1
+nickname = 
+na_values = #N/A, #N/A N/A, #NA, -1.#IND, -1.#QNAN, -NaN, -nan, 1.#IND, 1.#QNAN, <NA>, N/A, NULL, n/a, null
 
-[IM-1234]
-dbname = aaaaaaa
-jiraname = IM-1234
-jirapath = E:\my_works\2020\5\First_Import\IM-1234\
-worktype = First Import
-merge = True
+[worklist]
 
-[IM-1233]
-dbname = mmmmm
-jiraname = IM-1233
-jirapath = E:\my_works\2020\5\First_Import\IM-1233\
-worktype = First Import
-merge = True
-
-[IM-12345]
-dbname = bbbbbbbbbbb
-jiraname = IM-12345
-jirapath = E:\my_works\2020\5\First_Import\IM-12345\
-worktype = First Import
-merge = True
