--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 [global]
-currentwork = 
-server = localhost
+currentwork = IM-1
+server = cd188
 
 [referencefile]
 emptytxt = reference_files\1111.txt
@@ -34,8 +34,24 @@ password = justdoit
 navicat_script_path = C:\Users\ryjfgjl\Documents\Navicat\MySQL\Servers\cd188\
 
 [excelimporter]
-nickname = 
+nickname = zxb
 na_values = #N/A, #N/A N/A, #NA, -1.#IND, -1.#QNAN, -NaN, -nan, 1.#IND, 1.#QNAN, <NA>, N/A, NULL, n/a, null
 
 [worklist]
+im-1 = IM-1
+int = INT
+
+[IM-1]
+dbname = accounttest
+jiraname = IM-1
+jirapath = E:\my_works\2020\7\30\First_Import\IM-1\
+worktype = First Import
+merge = True
+
+[INT]
+dbname = zxb
+jiraname = INT
+jirapath = E:\my_works\2020\9\1\Fix_Import\INT\
+worktype = Fix Import
+merge = True
 
