--- a/config.ini
+++ b/config.ini
@@ -46,7 +46,7 @@ dbname = accounttest
 jiraname = IM-1
 jirapath = E:\my_works\2020\7\30\First_Import\IM-1\
 worktype = First Import
-merge = True
+merge = False
 
 [INT]
 dbname = zxb
