--- a/config.ini
+++ b/config.ini
@@ -38,15 +38,15 @@ nickname = zxb
 na_values = #N/A, #N/A N/A, #NA, -1.#IND, -1.#QNAN, -NaN, -nan, 1.#IND, 1.#QNAN, <NA>, N/A, NULL, n/a, null
 
 [worklist]
-im-1 = IM-1
 int = INT
+im-1 = IM-1
 
 [IM-1]
 dbname = accounttest
 jiraname = IM-1
 jirapath = E:\my_works\2020\7\30\First_Import\IM-1\
 worktype = First Import
-merge = False
+merge = True
 
 [INT]
 dbname = zxb
